--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,4 @@ lib/generated_plugin_registrant.dart
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 
 # End of https://www.toptal.com/developers/gitignore/api/dart,cocoapods,flutter
+.DS_Store
