--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,9 @@ dependencies:
   google_sign_in: ^5.1.0
   cloud_firestore: ^2.5.1
 
-  url_launcher: ^6.0.10
-  
+  url_launcher: ^6.0.17
+  package_info: ^2.0.2
+  firebase_remote_config: ^0.11.0+2
   
 
 
