--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   url_launcher: ^6.0.10
   package_info: ^2.0.2
   firebase_remote_config: ^0.11.0+2
-  
+  shared_preferences: ^2.0.11
 
 
   # The following adds the Cupertino Icons font to your application.
