Homepage new card

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,12 +64,8 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-    - assets/icons/googleLogo.png
-    - assets/icons/appleLogo.png
-    - assets/images/onboarding.png
-    - assets/images/previewA.png
-    - assets/images/previewB.png
-    - assets/images/previewC.png
+    - assets/icons/
+    - assets/images/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
