--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_remote_config: ^0.11.0+2
   shared_preferences: ^2.0.11
 
+  fl_chart: ^0.40.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
