--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
 
   fl_chart: ^0.40.6
   unsplash_client: ^2.1.0+1
+  flutter_time_picker_spinner: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
