--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
 
   url_launcher: ^6.0.17
   package_info: ^2.0.2
-  firebase_remote_config: ^0.11.0+2
+  firebase_remote_config: ^2.0.0
   shared_preferences: ^2.0.11
   flutter_local_notifications: ^9.1.5
   rxdart: ^0.27.3
