--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: morning_brief
 description: A new Flutter project.
 
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
-version: 1.1.4+1
+version: 1.1.5+1
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -13,6 +13,7 @@ dependencies:
   google_fonts: ^2.1.0
   flutter_spinkit: ^5.1.0
   font_awesome_flutter: ^9.1.0
+  cached_network_image: ^3.2.0
 
   get: ^4.3.8
 
